# glcat

./: .gitignore  AspectPipelineWorkspace.ipynb  Cutout Code.ipynb  FUV_NUV_Offset.ipynb  README.md  __init__.py  all_useful_masking_tools.ipynb  aspect.ipynb  aspect_pipeline.py  aspect_pipeline_cli.py  astrometry test .ipynb  astrometry_time_trials.ipynb  backplane_times.csv  bucket.ipynb  centroidcorrelation.ipynb  check affine transform .ipynb  checking_new_masks_jun2024.ipynb  cleaned up interpolation.ipynb  coregistration and distortion.ipynb  dose_fwhm_investigation.ipynb  environment.yml  every3_fuv.csv  every3_nuv.csv  filenames.py  fuv offset dose.ipynb  fuv_1000e.csv  fuv_hotspot_masks.ipynb  fuv_masks_200stack.ipynb  fuv_offset_using_lists.ipynb  fwhm_mass.ipynb  gif.ipynb  hotspot .ipynb  improving dao star choice .ipynb  make_full_depth_dosemaps.ipynb  new_aspect.csv  new_aspect_pipeline.py  none  nuv_1000e.csv  nuv_no_ngs.csv  quality checking methods.ipynb  (+13 more)
.ipynb_checkpoints/: bucket-checkpoint.ipynb
aspect_correction/: __init__.py  combine_wcs.py  combined_aspect_correction.py  dose_aspect_correction.py  image_runs.py  main.py  run_aspect_correction.py  slew_correction.py  util.py  xylist_runs.py
astrometry/: Astrometry.net testing.ipynb  Astrometry.net_testing.ipynb  RANSAC_testing.ipynb
catalog/: pyproject.toml
catalog/src/glcat/: __init__.py  cataloging.py  cli.py  constants.py  gphoton_ext.py  modelphotometry.py  stages.py
modelphotom/: photometry_model_run.ipynb  pyproject.toml
modelphotom/modelphotom/: __init__.py  cli.py
(+213 files in other folders)
